--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,5 @@
+{% assign current = page.url | downcase | split: '/' %}
+
 <div class="row nav-bar mt6">
     <div class="large-1 medium-1 small-2 columns">
         <a href="{{ site.url }}" class="heading">
@@ -8,13 +10,13 @@
         <hr class="nav-rule">
     </div>
     <div class="large-6 medium-9 small-2 columns">
-        <ul class="no-bullet align-right float-right pv2 mb0">
-            <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Projects</a></li>
+        <ul class="no-bullet align-right float-right hide-for-small-only pv2 mb0">
+            <li class="ph3"><a href="{{ site.url }}/#projects" {% if current[1] == 'projects' %}class='active font-bold primary'{% endif %} class="font-medium primary">Projects</a></li>
             <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Blog</a></li>
             <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Store</a></li>
             <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Design Room</a></li>
             <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Garage</a></li>
-            <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">About</a></li>
+            <li class="ph3"><a href="{{ site.url }}/about" {% if current[1] == 'about' %}class='active font-bold primary'{% endif %} class="font-medium primary">About</a></li>
         </ul>
     </div>
 </div>
