--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,17 +10,24 @@ layout: default
 <section>
     <div class="full-width-background-light mt7 pv6">
         <div class="row">
-            <div class="large-8 medium-8 end columns">
+            <div class="large-8 medium-8 columns">
                 <span class="font-dark text-justify lh-copy tracked" style="font-size: 1.15rem;">{{ content }}</span>
             </div>
             <div class="large-3 medium-3 small-collapsed columns">
-                <div class="content-table-bar" style="display: inline-block; height: 8rem;"></div>
-                <ul class="vertical-menu no-bullet ml3" style="display: inline-block; vertical-align: top;">
-                    <li class="pv1 font-dark">Overview</li>
-                    <li class="pv1 font-dark">When</li>
-                    <li class="pv1 font-dark">Research</li>
-                    <li class="pv1 font-dark">How</li>
-                </ul>
+                <ul class="mt1 no-bullet article-sidebar">
+                    <li class="mt2 mb4">
+                        <h6 class="font-medium font-dark font-secondary f6 mb0">YOU ARE HERE</h6>
+                        <p class="mt1 font-dark">Home / Blog / {{ page.title }}</p>
+                    </li>
+                    <li class="mt2 mb4">
+                        <h6 class="font-medium font-dark font-secondary f6 mb0">PUBLISHED ON</h6>
+                        <p class="mt1 font-dark">{{ page.date | date_to_long_string }}</p>
+                    </li>
+                    <li class="mt2 mb4">
+                        <h6 class="font-medium font-dark font-secondary f6 mb0">READ TIME</h6>
+                        <p class="mt1 font-dark">{{ page.read-time }}</a>
+                    </li>
+            </ul>
             </div>
         </div> 
     </div>    
