--- a/css/app.css
+++ b/css/app.css
@@ -5632,6 +5632,12 @@ table.hover tbody tr:nth-of-type(even):hover {
   background: #191919;
   border-radius: 2px; }
 
+.garage-card {
+  background: #e62027;
+  width: 100%;
+  height: 6rem;
+  border-radius: 4px; }
+
 @media screen and (max-width: 39.9375em) {
   .display-pic {
     padding-left: 1rem;
@@ -5681,6 +5687,11 @@ table.hover tbody tr:nth-of-type(even):hover {
 .blog-list {
   background: #333333;
   border-radius: 2px; }
+
+.article-sidebar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0; }
 
 a.active {
   color: #e62027; }
