Added story section in identity project

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -65,6 +65,12 @@
 }
 
 .full-width-background-light {
+  background: $white;
+  margin-left: 1%;
+  margin-right: 1%;
+}
+
+.portfolio-background {
   background: rgba(238, 238, 238, 1);
   margin-left: 1%;
   margin-right: 1%;
