--- a/css/app.css
+++ b/css/app.css
@@ -5510,6 +5510,11 @@ table.hover tbody tr:nth-of-type(even):hover {
   font-size: 0.9em; }
 
 .full-width-background-light {
+  background: #ffffff;
+  margin-left: 1%;
+  margin-right: 1%; }
+
+.portfolio-background {
   background: #eeeeee;
   margin-left: 1%;
   margin-right: 1%; }
