--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -356,8 +356,21 @@
 }
 
 .article-title {
-  margin-top: -8rem;
-  .card {
-    background-color: $primary-color;
+  font-size: 4.5rem;
+  margin-left: 0;
+
+  @include breakpoint (medium down){
+    font-size: 3rem;
+    //margin-left: 0.25rem;
+  }
+}
+
+.article-background {
+  background: $white;
+  border-radius: 1rem;
+
+  @include breakpoint (medium down){
+    margin-left: 1%;
+    margin-right: 1%;
   }
 }
