Updated XBOX design

--- a/css/app.css
+++ b/css/app.css
@@ -5669,12 +5669,16 @@ table.hover tbody tr:nth-of-type(even):hover {
   background-size: cover; }
 
 .xbox-thumbnail {
-  background: url("/assets/images/projects-thumbnails/xbox.jpg") no-repeat center center;
+  background: url("/assets/images/projects/xbox/thumbnail.jpg") no-repeat center center;
   background-size: cover; }
   .xbox-thumbnail:hover {
-    background: url("/assets/images/projects-thumbnails/xbox-hover.jpg") no-repeat center center;
+    background: url("/assets/images/projects/xbox/thumbnail-hover.jpg") no-repeat center center;
     background-size: cover;
     transition: 0.3s; }
+
+.xbox-hero {
+  background: url("/assets/images/projects/xbox/hero.jpg") no-repeat center center;
+  background-size: cover; }
 
 .monocle-thumbnail {
   background: url("/assets/images/projects-thumbnails/monocle.jpg") no-repeat center center;
