--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -334,11 +334,24 @@
 }
 
 .uber-thumbnail {
-  background: url("/assets/images/projects-thumbnails/uber.jpg") no-repeat center center; 
+  background: url("/assets/images/projects/uber/thumbnail.jpg") no-repeat center center; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+
+  &:hover {
+    background: url("/assets/images/projects/uber/thumbnail-hover.jpg") no-repeat center center; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    -o-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+  }
 }
 
 .content-table-bar {
