--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,16 @@
 
     <!-- Loading JavaScripts
     ================================================== -->
+    <script>
+      function togglemenu(){
+        var x = document.getElementById("overlaymenu");
+        if (x.className === "hide") {
+            x.className = "full-screen-menu";
+        } else {
+            x.className = "hide";
+        }
+      }
+    </script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ site.url }}/bower_components/jquery/dist/jquery.js"><\/script>')</script>
     <script src="{{ site.url }}/bower_components/what-input/what-input.js"></script>
