--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -395,3 +395,13 @@
     margin-right: 1%;
   }
 }
+
+.full-screen-menu {
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: $black;
+  opacity: 0.7;
+  position: absolute;
+}
