--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,17 +19,20 @@
             <li class="ph3"><a href="{{ site.url }}/about" {% if current[1] == 'about' %} class='active font-bold primary'{% endif %} class="font-medium primary">About</a></li>
         </ul>
         <a class="show-for-small-only" onclick="togglemenu()">
-            <img class="mt1" src="/assets/menu.svg"/>
+            <img class="mt1 ml2" src="/assets/menu.svg"/>
         </a>
     </div>
 </div>
 <div id="overlaymenu" class="hide">
-    <ul class="no-bullet text-center show-for-small-only pv2 mb0">
-        <li class="ph3"><a href="{{ site.url }}/#projects" {% if current[1] == 'projects' %} class='active font-bold primary'{% endif %} class="font-medium primary">Projects</a></li>
-        <li class="ph3"><a href="{{ site.url }}/blog" {% if current[1] == 'blog' %} class='active font-bold primary'{% endif %} class="font-medium primary">Blog</a></li>
-        <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Store</a></li>
-        <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Design Room</a></li>
-        <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Garage</a></li>
-        <li class="ph3"><a href="{{ site.url }}/about" {% if current[1] == 'about' %} class='active font-bold primary'{% endif %} class="font-medium primary">About</a></li>
+    <a class="close" onclick="togglemenu()">
+        <img class="logo mt2" src="/assets/close.svg"/>     
+    </a>
+    <ul class="no-bullet text-center pv2 mb0">
+        <li class="mv3"><a href="{{ site.url }}/#projects" {% if current[1] == 'projects' %} class='active font-bold primary f4'{% endif %} class="font-medium primary f4">Projects</a></li>
+        <li class="mv3"><a href="{{ site.url }}/blog" {% if current[1] == 'blog' %} class='active font-bold primary f4'{% endif %} class="font-medium primary f4">Blog</a></li>
+        <li class="mv3"><a href="{{ site.url }}/about" class="font-medium primary f4">Store</a></li>
+        <li class="mv3"><a href="{{ site.url }}/about" class="font-medium primary f4">Design Room</a></li>
+        <li class="mv3"><a href="{{ site.url }}/about" class="font-medium primary f4">Garage</a></li>
+        <li class="mv3"><a href="{{ site.url }}/about" {% if current[1] == 'about' %} class='active font-bold primary f4'{% endif %} class="font-medium primary f4">About</a></li>
     </ul>
 </div>
