--- a/css/app.css
+++ b/css/app.css
@@ -5733,8 +5733,23 @@ table.hover tbody tr:nth-of-type(even):hover {
   right: 0;
   bottom: 0;
   background: #000000;
-  opacity: 0.7;
+  opacity: 0.9;
   position: absolute; }
+  .full-screen-menu ul {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%); }
+  .full-screen-menu .close {
+    position: absolute;
+    top: 5%;
+    right: 5%; }
+
+body.disable-scroll {
+  overflow: hidden; }
 
 a.active {
   color: #e62027; }
