--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -402,6 +402,26 @@
   right: 0;
   bottom: 0;
   background: $black;
-  opacity: 0.7;
+  opacity: 0.9;
   position: absolute;
+
+  ul{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+  }
+
+  .close {
+    position: absolute;
+    top: 5%;
+    right: 5%;
+  }
+}
+
+body.disable-scroll {
+  overflow: hidden;
 }
