--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,9 +40,11 @@
         if (x.className === "hide") {
             x.className = "full-screen-menu";
             $("body").addClass("disable-scroll");
+            $("html").addClass("disable-scroll");
         } else {
             x.className = "hide";
-            $("body").removeClass("disable-scroll")
+            $("body").removeClass("disable-scroll");
+            $("html").removeClass("disable-scroll");
         }
       }
     </script>
