Updated overlay menu animation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
         </a>
     </div>
 </div>
-<div id="overlaymenu" class="hide">
+<div id="overlaymenu" class="full-screen-menu">
     <a class="close" onclick="togglemenu()">
         <img class="logo mt2" src="/assets/close.svg"/>     
     </a>
