--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -388,7 +388,7 @@
 
 .article-background {
   background: $white;
-  border-radius: 1rem;
+  border-radius: 0.25rem;
 
   @include breakpoint (medium down){
     margin-left: 1%;
@@ -402,8 +402,13 @@
   right: 0;
   bottom: 0;
   background: $black;
-  opacity: 0.9;
+  opacity: 0;
   position: absolute;
+  -o-transition: opacity 0.3s ease-out;
+  -ms-transition: opacity 0.3s ease-out;
+  -moz-transition: opacity 0.3s ease-out;
+  -webkit-transition: opacity 0.3s ease-out;
+  transition: opacity 0.3s ease-out;
 
   ul{
     position: absolute;
@@ -420,6 +425,10 @@
     top: 5%;
     right: 5%;
   }
+}
+
+.full-screen-menu.show {
+  opacity: 1;
 }
 
 body.disable-scroll {
