--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -402,6 +402,7 @@
   right: 0;
   bottom: 0;
   background: $black;
+  visibility: hidden;
   opacity: 0;
   position: absolute;
   -o-transition: opacity 0.3s ease-out;
@@ -428,7 +429,9 @@
 }
 
 .full-screen-menu.show {
+  visibility: visible;
   opacity: 1;
+  z-index: 1;
 }
 
 body.disable-scroll {
