Added store images placeholders

--- a/css/app.css
+++ b/css/app.css
@@ -5761,6 +5761,9 @@ body.disable-scroll {
 html.disable-scroll {
   overflow: hidden; }
 
+.placeholder {
+  background: #ffffff; }
+
 a.active {
   color: #e62027; }
 
