--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
     <ul class="no-bullet text-center pv2 mb0">
         <li class="mv3"><a href="{{ site.url }}/#projects" {% if current[1] == 'projects' %} class='active font-bold primary f4'{% endif %} class="font-medium primary f4">Projects</a></li>
         <li class="mv3"><a href="{{ site.url }}/blog" {% if current[1] == 'blog' %} class='active font-bold primary f4'{% endif %} class="font-medium primary f4">Blog</a></li>
-        <li class="mv3"><a href="{{ site.url }}/about" class="font-medium primary f4">Store</a></li>
+        <li class="ph3"><a href="{{ site.url }}/store" {% if current[1] == 'store' %} class='active font-bold primary'{% endif %} class="font-medium primary">Store</a></li>
         <li class="mv3"><a href="{{ site.url }}/about" class="font-medium primary f4">Design Room</a></li>
         <li class="mv3"><a href="{{ site.url }}/about" class="font-medium primary f4">Garage</a></li>
         <li class="mv3"><a href="{{ site.url }}/about" {% if current[1] == 'about' %} class='active font-bold primary f4'{% endif %} class="font-medium primary f4">About</a></li>
