Added the garage page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
             <li class="ph3"><a href="{{ site.url }}/blog" {% if current[1] == 'blog' %} class='active font-bold primary'{% endif %} class="font-medium primary">Blog</a></li>
             <li class="ph3"><a href="{{ site.url }}/store" {% if current[1] == 'store' %} class='active font-bold primary'{% endif %} class="font-medium primary">Store</a></li>
             <li class="ph3"><a href="{{ site.url }}/the-design-room" {% if current[1] == 'the-design-room' %} class='active font-bold primary'{% endif %} class="font-medium primary">Design Room</a></li>
-            <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Garage</a></li>
+            <li class="ph3"><a href="{{ site.url }}/the-garage" {% if current[1] == 'the-garage' %} class='active font-bold primary'{% endif %} class="font-medium primary">Garage</a></li>
             <li class="ph3"><a href="{{ site.url }}/about" {% if current[1] == 'about' %} class='active font-bold primary'{% endif %} class="font-medium primary">About</a></li>
         </ul>
         <a class="show-for-small-only" onclick="togglemenu()">
@@ -32,7 +32,7 @@
         <li class="mv3"><a href="{{ site.url }}/blog" {% if current[1] == 'blog' %} class='active font-bold primary f4'{% endif %} class="font-medium primary f4">Blog</a></li>
         <li class="mv3"><a href="{{ site.url }}/store" {% if current[1] == 'store' %} class='active font-bold primary f4'{% endif %} class="font-medium primary f4">Store</a></li>
         <li class="mv3"><a href="{{ site.url }}/the-design-room" {% if current[1] == 'the-design-room' %} class='active font-bold primary f4'{% endif %} class="font-medium primary f4">Design Room</a></li>
-        <li class="mv3"><a href="{{ site.url }}/about" class="font-medium primary f4">Garage</a></li>
+        <li class="mv3"><a href="{{ site.url }}/the-garage" {% if current[1] == 'the-garage' %} class='active font-bold primary f4'{% endif %} class="font-medium primary f4">Garage</a></li>
         <li class="mv3"><a href="{{ site.url }}/about" {% if current[1] == 'about' %} class='active font-bold primary f4'{% endif %} class="font-medium primary f4">About</a></li>
     </ul>
 </div>
