--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -445,3 +445,24 @@ html.disable-scroll {
 .placeholder {
   background: $white;
 }
+
+.behance-store-thumbnail {
+  background: url("/assets/images/store/view-for-behance.jpg") no-repeat center center; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+  &:hover {
+    background: url("/assets/images/store/view-for-behance.jpg") no-repeat center center; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    -o-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+  }
+}
