--- a/css/app.css
+++ b/css/app.css
@@ -5766,14 +5766,13 @@ html.disable-scroll {
 
 .store-product-container {
   position: relative; }
-  .store-product-container a {
+  .store-product-container .cta {
     position: absolute;
     right: 1rem;
     left: 1rem;
     margin: auto;
-    bottom: 1rem;
-    border: 1px solid #212121; }
-    .store-product-container a:visited {
+    bottom: 1rem; }
+    .store-product-container .cta:visited {
       color: #ffffff;
       text-decoration: none; }
 
@@ -5783,6 +5782,10 @@ html.disable-scroll {
 
 .carol-store-thumbnail {
   background: url("/assets/images/store/carol.jpg") no-repeat center center;
+  background-size: cover; }
+
+.wallpapers-store-thumbnail {
+  background: url("/assets/images/store/wallpapers.jpg") no-repeat center center;
   background-size: cover; }
 
 a.active {
