--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -486,3 +486,11 @@ html.disable-scroll {
   -o-background-size: cover;
   background-size: cover;
 }
+
+.promote-store-thumbnail {
+  background: url("/assets/images/store/promote.jpg") no-repeat center center; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
