Updated buildmlearn project

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -312,15 +312,15 @@
   background-size: cover;
 }
 
-.monocle-thumbnail {
-  background: url("/assets/images/projects-thumbnails/monocle.jpg") no-repeat center center; 
+.buildmlearn-thumbnail {
+  background: url("/assets/images/projects/buildmlearn/thumbnail.jpg") no-repeat center center; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 
   &:hover {
-    background: url("/assets/images/projects-thumbnails/monocle-hover.jpg") no-repeat center center; 
+    background: url("/assets/images/projects/buildmlearn/thumbnail-hover.jpg") no-repeat center center; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
