--- a/css/app.css
+++ b/css/app.css
@@ -5681,11 +5681,11 @@ table.hover tbody tr:nth-of-type(even):hover {
   background: url("/assets/images/projects/xbox/hero.jpg") no-repeat center center;
   background-size: cover; }
 
-.monocle-thumbnail {
-  background: url("/assets/images/projects-thumbnails/monocle.jpg") no-repeat center center;
+.buildmlearn-thumbnail {
+  background: url("/assets/images/projects/buildmlearn/thumbnail.jpg") no-repeat center center;
   background-size: cover; }
-  .monocle-thumbnail:hover {
-    background: url("/assets/images/projects-thumbnails/monocle-hover.jpg") no-repeat center center;
+  .buildmlearn-thumbnail:hover {
+    background: url("/assets/images/projects/buildmlearn/thumbnail-hover.jpg") no-repeat center center;
     background-size: cover;
     transition: 0.3s; }
 
