Added a divider before footer section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
   <body>
     {% include header.html %}
     {{ content }}
+    <img class="float-center mv6" src="/assets/divider.svg"/>
      <div class="row expanded footer mt3">
       {% include footer.html %}
     </div> 
