Added disqus to the site

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,7 @@ layout: default
     <div class="row article-background mv6 pv6">                        
         <div class="large-7 medium-7 large-offset-1 medium-offset-1 columns">
             <span class="article-container text-justify font-dark">{{ content }}</span>
+            {% include disqus.html %}
         </div>
         <div class="large-3 medium-3 columns sidebar ph3 pv2 mr4">
             <ul class="no-bullet">
