Fixed showing of page title instead of description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     {% else %}
     <title>{{ site.name }} / {{ page.title }}</title>
     {% endif %}
-    <meta name="description" content="{{ site.name }} / {{ page.title }}" />
+    <meta name="description" content="{{ page.description }}" />
     <meta name="keywords" content="{{ page.keywords }}, {{ site.keywords }}" />
     <link rel="stylesheet" href="{{ site.url }}/css/app.css">
     <link rel="shortcut icon" href="{{ site.url }}/assets/favicon.ico">
