--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -7,27 +7,27 @@
 <div class="row">
   <div {% if current[2] == 'personal-identity' %} class='hide'{% endif %} class="large-3 medium-3 columns mt3">
     <a href="{{ site.url }}/projects/personal-identity">
-      <img src="/assets/images/projects/identity/square-thumbnail.jpg"/>
+      <img src="/assets/images/projects/identity/square-thumbnail.jpg" alt="Personal Identity Project"/>
     </a>
   </div>
   <div {% if current[2] == 'view-for-behance' %} class='hide'{% endif %} class="large-3 medium-3 columns mt3">
     <a href="{{ site.url }}/projects/view-for-behance">
-      <img src="/assets/images/projects/behance/square-thumbnail.jpg"/>
+      <img src="/assets/images/projects/behance/square-thumbnail.jpg" alt="View for Behance Project"/>
     </a>
   </div>
   <div {% if current[2] == 'xbox' %} class='hide'{% endif %} class="large-3 medium-3 columns mt3">
     <a href="{{ site.url }}/projects/xbox">
-      <img src="/assets/images/projects/xbox/thumbnail.jpg"/>
+      <img src="/assets/images/projects/xbox/thumbnail.jpg" alt="XBOX Project"/>
     </a>
   </div>
   <div {% if current[2] == 'buildmlearn' %} class='hide'{% endif %} class="large-3 medium-3 columns mt3">
     <a href="https://www.behance.net/gallery/24517349/BuildmLearn-App-Store-on-Windows-Phone-Concept">
-      <img src="/assets/images/projects/buildmlearn/thumbnail.jpg"/>
+      <img src="/assets/images/projects/buildmlearn/thumbnail.jpg" alt="Buildmlearn Project"/>
     </a>
   </div>
   <div {% if current[2] == 'uber' %} class='hide'{% endif %} class="large-3 medium-3 columns mt3">
     <a href="{{ site.url }}/projects/uber">
-      <img src="/assets/images/projects/uber/square-thumbnail.jpg"/>
+      <img src="/assets/images/projects/uber/square-thumbnail.jpg"alt="Uber Infographics Project"/>
     </a>
   </div>
 </div>
