--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
   <body>
     {% include header.html %}
     {{ content }}
-    <img class="float-center mv6" src="/assets/divider.svg" class="Horizontal Divider"/>
+    <img class="float-center mv6" src="/assets/divider.svg" alt="Horizontal Divider"/>
      <div class="row expanded footer mt3">
       {% include footer.html %}
     </div> 
