--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -103,3 +103,69 @@ a.disabled {
 .fa-facebook:hover {
   background-color: #3d5b99;
 }
+
+.share-btn {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  padding: 3px 10px 2px 8px;
+  
+  text-shadow: 1px 1px 1px rgba(0,0,0,.1);
+  color: #fff;
+  background-color: #333;
+  border-radius: 2px;
+  box-shadow: 0 1px 1px rgba(0,0,0,.35);
+  text-decoration: none;
+  font-size: 15px;
+
+  &:hover {
+    text-decoration: none;
+    color: $white;
+  }
+
+  &:active {
+    top: 1px;
+    box-shadow: 0 0 1px rgba(0,0,0,.25);
+  }
+
+  &:visited {
+    text-decoration: none;
+    color: $white;
+  }
+}
+
+.share-btn.light {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  padding: 3px 10px 2px 8px;
+  
+  text-shadow: 1px 1px 1px rgba(0,0,0,.1);
+  color: $black;
+  border-radius: 2px;
+  box-shadow: 0 1px 1px rgba(0,0,0,.35);
+  text-decoration: none;
+  font-size: 15px;
+
+  &:hover {
+    text-decoration: none;
+    color: $black;
+  }
+
+  &:active {
+    top: 1px;
+    box-shadow: 0 0 1px rgba(0,0,0,.25);
+  }
+}
+
+.facebook {
+  background-color: #4A66B7;
+}
+
+.twitter {
+  background-color: #1B95E0;
+}
+
+.google-plus {
+  background-color: #fefefe;
+}
