--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -502,3 +502,16 @@ html.disable-scroll {
   -o-background-size: cover;
   background-size: cover;
 }
+
+.share-box {
+  background-color: #efefef;
+  border: 1px solid #e5e5e5;
+  border-radius: 2px;
+  text-align: center;
+
+  @include breakpoint(small only){
+    margin-top: 1rem;
+    margin-right: 0;
+  }
+}
+
