Updated social media preview image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% if page.title == 'Anagh Sharma - Design & Make' %}
+    {% if page.title == 'Anagh Sharma - Design + Make' %}
     <title>{{ site.name }} - Product Designer</title>
     {% else %}
     <title>{{ site.name }} / {{ page.title }}</title>
