Added LinkedIn in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,6 +23,9 @@
                 <li class="pv1">
                     <a href="{{ site.twitter }}" target="_blank" class="primary">Twitter</a>
                 </li>
+                <li class="pv1">
+                    <a href="{{ site.linkedin }}" target="_blank" class="primary">LinkedIn</a>
+                </li>
             </ul>
         </div>
     </div>
